# zkcp-fair-exchange

./: .env.template  .gitignore  .prettierignore  eslint.config.mjs  hardhat.config.ts  lint-staged.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
contracts/: DatasetNFT.sol  Escrow.sol  ZK-Verifier-2.sol  ZK-Verifier.sol  ZK-VerifierOld.sol  hardhat.config.cjs  package.json
contracts/risc0/: RiscZeroVerifierRouter.sol
deployments/: sepolia.json
docs/: NFT.md
frontend/: .env.tempate  .env.template  .gitignore  package.json  tsconfig.app.json
frontend/public/locales/en/: translation.json
frontend/src/:  i18n.ts  App.tsx  main.tsx
frontend/src/components/: BlurBackgroundView.tsx  Carousel.tsx  MarketplaceNFTCardView.tsx  PortfolioNFTPurchasedCardView.tsx  PrivateKeyExportModal.tsx  SecretField.tsx  TopBar.tsx  UploadModal.tsx  WalletConnectButton.tsx
frontend/src/contracts/: config.ts
frontend/src/hooks/: useWalletAccount.tsx
frontend/src/pages/: Home.tsx  MarketPlaceNFTDetail.tsx  Marketplace.tsx  Portfolio.tsx
frontend/src/providers/: WagmiProvider.tsx
frontend/src/services/: fileService.tsx  keyService.ts  listingNftService.tsx  smartContractService.tsx  zkService.ts
frontend/src/styles/: App.css  index.css
frontend/src/types/: nftTypes.tsx  zkTypes.ts
frontend/src/utils/: encodingUtils.ts
scripts/: deploy.ts  zkDeploy.ts
tests/: EscrowTest1.test.ts  GasTest.test.ts  GasTestZK.test.ts  NFT-Escrow-Integration.test.ts
zk/secret-verifier/: .env.example
zkdrop-proof/: .env.template  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
zkdrop-proof/host/: Cargo.toml
zkdrop-proof/host/src/: config.rs  main.rs  routes.rs  zkvm.rs
zkdrop-proof/host/src/handlers/: aes_ctr.rs  mod.rs  rsa.rs
zkdrop-proof/methods/: Cargo.toml
zkdrop-proof/methods/guest/: Cargo.toml
zkdrop-proof/methods/guest/src/: aes_verifier.rs  ecdsa_verifier.rs  main.rs  rsa_verifier.rs
zkdrop-proof/samples/: aes-verify-request.http  rsa-encrypt-request.http  rsa-verify-request.http
zkdrop-proof/zkdrop-lib/: Cargo.toml
zkdrop-proof/zkdrop-lib/src/: aes_ctr.rs  lib.rs  rsa.rs  types.rs  utils.rs
