[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
zkdrop-lib = { path = "../zkdrop-lib" }
aes-gcm = { version = "0.10", features = ["aes"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
rand_core = "0.6"
rand = "0.9.1"
