[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zkdrop-lib = { path = "../zkdrop-lib" }
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
bonsai-sdk = "1.4.0"
anyhow = "1.0.98"
hex = "0.4.3"
bytemuck = "1.23.1"
bincode = "1.3" 
base64 = "0.22.1"
