[package]
name = "zkdrop-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
rsa = { version = "0.9", default-features = false }
sha2 = "0.10"
base64 = "0.21"
rand = { version = "0.8", default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.3", default-features = false }


[features]
default = ["std"]
std = []            # enable for host only

[lib]
crate-type = ["rlib"]