[package]
name = "zkdrop_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
zkdrop-lib = { path = "../../zkdrop-lib", default-features = false }
risc0-zkvm = { version = "^2.2.0", default-features = false, features = ['std'] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
